<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_background2"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#3fff"
        android:gravity="center"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@android:dimen/app_icon_size"
            android:text="@string/welcome_title"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let start"
            android:background="@drawable/circle"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#FFFBF6"/>
        <Button
            android:id="@+id/livraison"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/liv_en_attente"
            android:textColorHint="#FFFBF6"
            android:background="@drawable/custombutton"
            />
        <Button
            android:id="@+id/commande"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:hint="@string/pass_cmd"
            android:textColorHint="#FFFBF6"
            android:background="@drawable/custombutton"/>


        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            android:layout_marginTop="15dp"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:srcCompat="@drawable/food_del_2"
            android:layout_marginTop="4dp"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
